--- a/application.yml
+++ b/application.yml
@@ -1,24 +1,30 @@
 ---
 spring:
   profiles: subject
-    words: I,You,He,She,It
+words: I,You,He,She,It
 
 ---
 spring:
   profiles: verb
-    words: ran,knew,had,saw,bought
+words: ran,knew,had,saw,bought
 
 ---
 spring:
   profiles: article
-    words: a,the
+words: a,the
 
 ---
 spring:
   profiles: adjective
-    words: reasonable,leaky,suspicious,ordinary,unlikely
+words: reasonable,leaky,suspicious,ordinary,unlikely
 
 ---
 spring:
   profiles: noun
-    words: boat,book,vote,seat,backpack,partition,groundhog
+words: boat,book,vote,seat,backpack,partition,groundhog
+
+---
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8010/eureka/
